# Ablet

./: Cargo.toml  README.md  data_architecture.mmd  error  notes.md  todo.md
examples/: fake_chat.rs
src/: ablet_type.rs  atext.rs  buffer.rs  document.rs  eddy.rs  lib.rs  splittree.rs  termutils.rs
src/snapshots/: ablet__atext__tests__append_text_and_split_at-2.snap  ablet__atext__tests__append_text_and_split_at-3.snap  ablet__atext__tests__append_text_and_split_at.snap  ablet__atext__tests__conversion-2.snap  ablet__atext__tests__conversion-3.snap  ablet__atext__tests__conversion.snap  ablet__atext__tests__conversion_and_test_append_text_and_split_at.snap  ablet__atext__tests__replace_range-2.snap  ablet__atext__tests__replace_range-3.snap  ablet__atext__tests__replace_range-5.snap  ablet__atext__tests__replace_range-5.snap.new  ablet__atext__tests__replace_range.snap  ablet__splittree__tests__splits_valid.snap
