[package]
name = "ablet"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
derive_more = { version = "1.0.0", features = ["constructor"] }
itertools = "0.13.0"
log = "0.4.22"
nonempty = "0.10.0"
persistent-structs = "0.1.1"
termcolor = "1.4.1"
thiserror = "2.0.3"

[dev-dependencies]
insta = { version = "1.41.1", features = ["redactions"] }
